# cloud-remediator-sage

./: .commitlintrc.json  .dockerignore  .editorconfig  .env.example  .eslintrc.js  .eslintrc.security.js  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .trivyignore  API.md  ARCHITECTURE.md  AUTONOMOUS_BACKLOG.md  AUTONOMOUS_EXECUTION_SUMMARY.md  AUTONOMOUS_SDLC_COMPLETE_SUMMARY.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_MATURITY_REPORT.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  Dockerfile  Makefile  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_READINESS_REPORT.md  PROJECT_CHARTER.md  QUANTUM_IMPLEMENTATION_REPORT.md  README.md  SDLC_AUTONOMOUS_EXECUTION_REPORT.md  SDLC_IMPLEMENTATION_SUMMARY.md  SECURITY.md  SETUP_REQUIRED.md  WORKFLOW_REQUIREMENTS.md  WORKFLOW_SETUP_GUIDE.md  (+23 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml  project-metrics.json  pull_request_template.md
coverage/: coverage-final.json
dependency-reports/: dependency-report-2025-08-25.json  latest-dependency-report.json
docs/: PERFORMANCE_OPTIMIZATION.md  ROADMAP.md
monitoring/: alerting-config.yml
quality-reports/: previous-quality-metrics.json
reports/: eslint-security.json
scripts/: advanced-security-audit.js  code-quality-metrics.js  dependency-monitor.js  generate-sbom.js  metrics-collector.js  package-release.js  performance-benchmark.js  security-scan.js  (+2 more)
(+248 files in other folders)
