[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cloud-remediator-sage"
version = "0.1.0"
description = "Cloud security CSPM scanner with auto-remediation — detects misconfigs and generates IaC fixes"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
